test/extern/records/OpaqueStructUseError.good
OpaqueStructUseError.chpl:9: error: cannot default initialize incomplete 'extern' type 'mydata'
