test/extern/records/OpaqueStructUseError.skipif
# This test should work in all configurations, so ultimately
# this .skipif should be removed.

# C codegen results in a different error, "sizeof on incomplete type,"
# generated by the C compiler. Such an error would cause a .bad mismatch.
CHPL_LLVM == none
CHPL_TARGET_COMPILER != llvm

# Gasnet and no-local compilations somehow attribute the internal error
# to ChapelBase.chpl, causing .bad mismatch. Skip it in those cases.
CHPL_COMM != none
COMPOPTS <= --no-local
